finished section 6-7 task

--- a/section-3-snowhorse-hares-Bonanza.ipynb
+++ b/section-3-snowhorse-hares-Bonanza.ipynb
@@ -55,14 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 76,
    "id": "d87ce0ab-d7a0-49c1-bd5a-91d5e995f05c",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -652,9 +653,9 @@
    },
    "source": [
     "# 4. Detecting messy values\n",
-    "In the metadata section of the EDI repository, find which are the allowed values for the hares’ sex. Create a small table in a markdown cell showing the values and their definitions.\n",
+    "In the metadata section of the EDI repository, find which are the allowed values for the hares’ sex. Create a small table in a markdown cell showing the values and their definitions. https://www.markdownguide.org/extended-syntax/#tables\n",
     "Get the number of times each unique sex non-NA value appears.\n",
-    "Check the documentation of value_counts(). What is the purpose of the dropna parameter and what is its default value? Repeat step (a), this time adding the dropna=False parameter to value_counts().\n",
+    "Check the documentation of value_counts(). What is the purpose of the dropna parameter and what is its default value? Repeat step (a), this time adding the dropna=False parameter to value_counts().https://pandas.pydata.org/docs/reference/api/pandas.Series.value_counts.html\n",
     "\n",
     "Discuss with your team the output of the unique value counts. In particular:\n",
     "\n",
@@ -679,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 67,
    "id": "2fd29f46-4fb7-4ee3-b055-6ca65cfe3d09",
    "metadata": {
     "tags": []
@@ -696,32 +697,477 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hares['sex'].str.lower().str.strip().value_counts().drop([\"?\",\"pf\"])"
+    "hares['sex'].str.lower().str.strip().value_counts().drop([\"?\",\"pf\"])\n",
+    "#.str.strip() - removes whitespace which was causing duplicate sex values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "13532f65-2256-4184-9b5d-b3e1f21a30ed",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex\n",
+       "f      1721\n",
+       "m      1249\n",
+       "NaN     352\n",
+       "?        40\n",
+       "f?       13\n",
+       "m?        4\n",
+       "pf        1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hares['sex'].str.lower().str.strip().value_counts(dropna=False)\n",
+    "# Naturally drops NA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d689c017-2685-42cd-a5ee-322ed55fa266",
    "metadata": {},
+   "source": [
+    "# 5. Brainstorm\n",
+    "- Individually, write step-by-step instructions on how you would wrangle the hares data frame to clean the values in the sex column to have only two classes female and male. Which codes would you assign to each new class? Remember: It’s ok if you don’t know how to code each step - it’s more important to have an idea of what you would like to do.\n",
+    "\n",
+    "- Discuss your step-by-step instructions with your team.\n",
+    "\n",
+    "The next exercise will guide you through cleaning the sex codes. There are many ways of doing this. The one presented here might not be the same way you thought about doing it - that’s ok! This one was designed to practice using the numpy.select() function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "306afca3-6f4c-4367-a454-05155243303b",
+   "metadata": {},
+   "source": [
+    "Create a dictionary, rename values to only be female and male, 'hares['sex'].dropna().value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7831f1ec-0917-4845-a214-3b0987b831c6",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# 6. Clean values\n",
+    "- Create a new column called sex_simple using the numpy.select() function so that\n",
+    "- ‘F’, ‘f’, and ‘f_’ in the sex column get assigned to ‘female’,\n",
+    "- ‘M’, ‘m’, and ‘m_’ get assigned to ‘male’, and\n",
+    "- anything else gets assigned np.nan\n",
+    "- Check the counts of unique values (including NAs) in the new sex_simple column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "c815e329-939b-4867-b6e6-1f75e66efe99",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "hares['sex'].str.lower().str.strip().value_counts(dropna=)"
+    "# check all the unique values\n",
+    "hares.sex.unique()\n",
+    "x = hares.sex"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c9bd465-9db5-4209-be18-2be915fbe4bf",
-   "metadata": {},
+   "execution_count": 86,
+   "id": "104041ef-7e9c-4018-9fda-a00c133a6acc",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "condition_list = [x.isin(['M','m','m ']), x.isin(['F','f','f '])]\n",
+    "output_list = ['male','female']\n",
+    "\n",
+    "hares['sex_simple'] = np.select(condition_list, output_list, default = np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "5d5de573-876d-420a-965c-0ed5e24caa75",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex_simple\n",
+       "female    1721\n",
+       "male      1249\n",
+       "nan        410\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hares['sex_simple'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68c5dcde-7957-4473-b46b-a506e7c4f0e5",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# 7 Calculate average weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "3306490e-2668-4045-92cf-3f02bde22653",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex_simple\n",
+       "female    1365.164792\n",
+       "male      1349.935542\n",
+       "nan       1193.364055\n",
+       "Name: weight, dtype: float64"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hares.groupby(by= 'sex_simple')['weight'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "a2df1ebc-b003-4ead-8d1f-096a930cb945",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>grid</th>\n",
+       "      <th>trap</th>\n",
+       "      <th>l_ear</th>\n",
+       "      <th>r_ear</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>hindft</th>\n",
+       "      <th>notes</th>\n",
+       "      <th>b_key</th>\n",
+       "      <th>session_id</th>\n",
+       "      <th>study</th>\n",
+       "      <th>sex_sample</th>\n",
+       "      <th>sex_simple</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11/26/1998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>1A</td>\n",
+       "      <td>414D096A08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1370.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>917.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Population</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11/26/1998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>2C</td>\n",
+       "      <td>414D320671</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1430.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>936.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Population</td>\n",
+       "      <td>male</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11/26/1998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>2D</td>\n",
+       "      <td>414D103E3A</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1430.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>921.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Population</td>\n",
+       "      <td>male</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11/26/1998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>2E</td>\n",
+       "      <td>414D262D43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1490.0</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>931.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Population</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11/26/1998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>3B</td>\n",
+       "      <td>414D2B4B58</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1710.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>933.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Population</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3375</th>\n",
+       "      <td>8/8/2002</td>\n",
+       "      <td>18:00:00</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>1b</td>\n",
+       "      <td>1201</td>\n",
+       "      <td>1202</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1400.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>Population</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3376</th>\n",
+       "      <td>8/8/2002</td>\n",
+       "      <td>6:00:00</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>4b</td>\n",
+       "      <td>1201</td>\n",
+       "      <td>1202</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>Population</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3377</th>\n",
+       "      <td>8/7/2002</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>4b</td>\n",
+       "      <td>1217</td>\n",
+       "      <td>1218</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>Population</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3378</th>\n",
+       "      <td>8/8/2002</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>6d</td>\n",
+       "      <td>1217</td>\n",
+       "      <td>1218</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>990.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>Population</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3379</th>\n",
+       "      <td>8/6/2002</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>4b</td>\n",
+       "      <td>1058</td>\n",
+       "      <td>1060</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1460.0</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>Population</td>\n",
+       "      <td>male</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3380 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date      time    grid trap       l_ear r_ear  sex  age  weight  \\\n",
+       "0     11/26/1998       NaN  bonrip   1A  414D096A08   NaN  NaN  NaN  1370.0   \n",
+       "1     11/26/1998       NaN  bonrip   2C  414D320671   NaN    M  NaN  1430.0   \n",
+       "2     11/26/1998       NaN  bonrip   2D  414D103E3A   NaN    M  NaN  1430.0   \n",
+       "3     11/26/1998       NaN  bonrip   2E  414D262D43   NaN  NaN  NaN  1490.0   \n",
+       "4     11/26/1998       NaN  bonrip   3B  414D2B4B58   NaN  NaN  NaN  1710.0   \n",
+       "...          ...       ...     ...  ...         ...   ...  ...  ...     ...   \n",
+       "3375    8/8/2002  18:00:00  bonrip  1b         1201  1202  NaN  NaN  1400.0   \n",
+       "3376    8/8/2002   6:00:00  bonrip  4b         1201  1202  NaN  NaN     NaN   \n",
+       "3377    8/7/2002       NaN  bonrip   4b        1217  1218  NaN  NaN  1000.0   \n",
+       "3378    8/8/2002       NaN  bonrip   6d        1217  1218  NaN  NaN   990.0   \n",
+       "3379    8/6/2002       NaN  bonrip   4b        1058  1060    M  NaN  1460.0   \n",
+       "\n",
+       "      hindft notes  b_key  session_id       study sex_sample sex_simple  \n",
+       "0      160.0   NaN  917.0          51  Population        nan        nan  \n",
+       "1        NaN   NaN  936.0          51  Population       male       male  \n",
+       "2        NaN   NaN  921.0          51  Population       male       male  \n",
+       "3      135.0   NaN  931.0          51  Population        nan        nan  \n",
+       "4      150.0   NaN  933.0          51  Population        nan        nan  \n",
+       "...      ...   ...    ...         ...         ...        ...        ...  \n",
+       "3375     NaN   NaN   63.0          64  Population        nan        nan  \n",
+       "3376     NaN   NaN   63.0          64  Population        nan        nan  \n",
+       "3377   134.0   NaN   69.0          64  Population        nan        nan  \n",
+       "3378     NaN   NaN   69.0          64  Population        nan        nan  \n",
+       "3379   119.0   NaN   32.0          64  Population       male       male  \n",
+       "\n",
+       "[3380 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hares"
+   ]
   }
  ],
  "metadata": {
