--- a/section-4-yucatan-hurricanes.ipynb
+++ b/section-4-yucatan-hurricanes.ipynb
@@ -1,6 +1,293 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "8efe2987-b912-4ccc-b29f-b48698f2906e",
+   "metadata": {},
+   "source": [
+    "## Yucatan Peninsula Hurricanes\n",
+    "### Week 4 - Discussion Section\n",
+    "\n",
+    "**Discription**\n",
+    "- Ecological Impacts of Hurricanes Across the Yucatan Peninsula 1851-2000. computer modeling was used for analysis.\n",
+    "**Citation** \n",
+    "- Boose, E. and D. Foster. 2023. Ecological Impacts of Hurricanes Across the Yucatan Peninsula 1851-2000 ver 23. Environmental Data Initiative. https://doi.org/10.6073/pasta/f219113373913f2daf421732e28d3c38 (Accessed 2025-10-24).\n",
+    "**Date of Access** \n",
+    "10/24/2025\n",
+    "**Link** https://portal.edirepository.org/nis/mapbrowse?packageid=knb-lter-hfr.71.23\n",
+    "\n",
+    "## 2. Data Exploratory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cd4277cc-63c7-4775-89c0-53a9b10e5d8f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "#Saving dataset url for import\n",
+    "URL = \"https://pasta.lternet.edu/package/data/eml/knb-lter-hfr/71/23/ab0fe2bf4f3ad850371ccb9c69d78469\"\n",
+    "\n",
+    "hurr = pd.read_csv(URL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "21218f34-233d-4cb5-87e0-576d512ca76a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>start.date</th>\n",
+       "      <th>end.date</th>\n",
+       "      <th>number</th>\n",
+       "      <th>name</th>\n",
+       "      <th>ss</th>\n",
+       "      <th>track</th>\n",
+       "      <th>rf.max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Y1852</td>\n",
+       "      <td>1852-10-07</td>\n",
+       "      <td>1852-10-08</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>O</td>\n",
+       "      <td>F1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Y1857</td>\n",
+       "      <td>1857-09-28</td>\n",
+       "      <td>1857-09-28</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>N</td>\n",
+       "      <td>F1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Y1861</td>\n",
+       "      <td>1861-08-17</td>\n",
+       "      <td>1861-08-17</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>O</td>\n",
+       "      <td>Nd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Y1864</td>\n",
+       "      <td>1864-08-31</td>\n",
+       "      <td>1864-08-31</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>S</td>\n",
+       "      <td>F1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Y1865</td>\n",
+       "      <td>1865-09-11</td>\n",
+       "      <td>1865-09-11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>O</td>\n",
+       "      <td>F1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    code  start.date    end.date  number name  ss track rf.max\n",
+       "0  Y1852  1852-10-07  1852-10-08       5  NaN   2     O     F1\n",
+       "1  Y1857  1857-09-28  1857-09-28       4  NaN   2     N     F1\n",
+       "2  Y1861  1861-08-17  1861-08-17       2  NaN   1     O     Nd\n",
+       "3  Y1864  1864-08-31  1864-08-31       3  NaN   1     S     F1\n",
+       "4  Y1865  1865-09-11  1865-09-11       4  NaN   2     O     F1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# First 5 rows\n",
+    "hurr.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "859ea42c-7f29-4754-9c9e-6ae8824042a0",
+   "metadata": {},
+   "source": [
+    "## Data Exploration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2c5a3b68-879d-41ab-b9c0-d8202b015556",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 105 entries, 0 to 104\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   code        105 non-null    object\n",
+      " 1   start.date  105 non-null    object\n",
+      " 2   end.date    105 non-null    object\n",
+      " 3   number      105 non-null    int64 \n",
+      " 4   name        33 non-null     object\n",
+      " 5   ss          105 non-null    int64 \n",
+      " 6   track       105 non-null    object\n",
+      " 7   rf.max      105 non-null    object\n",
+      "dtypes: int64(2), object(6)\n",
+      "memory usage: 6.7+ KB\n",
+      "code           0\n",
+      "start.date     0\n",
+      "end.date       0\n",
+      "number         0\n",
+      "name          72\n",
+      "ss             0\n",
+      "track          0\n",
+      "rf.max         0\n",
+      "dtype: int64 n/ None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hurr.isna().sum(), 'n/', hurr.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ea96c536-85ed-4c36-98fb-aaf297832504",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "code          object\n",
+       "start.date    object\n",
+       "end.date      object\n",
+       "number         int64\n",
+       "name          object\n",
+       "ss             int64\n",
+       "track         object\n",
+       "rf.max        object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hurr.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0e650ef6-437b-4286-bc83-ee289993c9e2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(105, 8)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hurr.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14ec0471-157f-460f-ba5c-524ff0b675fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "EDS220",
+   "language": "python",
+   "name": "eds220-env"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
