--- a/section-4-yucatan-hurricanes.ipynb
+++ b/section-4-yucatan-hurricanes.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "2c5a3b68-879d-41ab-b9c0-d8202b015556",
    "metadata": {
     "tags": []
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "0e650ef6-437b-4286-bc83-ee289993c9e2",
    "metadata": {
     "tags": []
@@ -251,7 +251,7 @@
        "(105, 8)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,9 +261,528 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9d0a77c-c1d1-4ede-82ef-2c58402d1c2e",
+   "metadata": {},
+   "source": [
+    "## 3. Brainstorm\n",
+    "\n",
+    "- How many hurricanes with Saffir-Simpson category 5 have been registered and what was their duration?\n",
+    "\n",
+    "Individually, write down step-by-step instructions on how you would wrangle the df data frame to answer the question. Do not code anything yet. Remember: It’s okay if you don’t know how to code each step. The important thing is to have an idea of what you’d like to do.\n",
+    "**Steps**\n",
+    "- filter ss column for only 5 (group by)\n",
+    "- count method to see how many values (value_counts?)\n",
+    "- end-start date\n",
+    "\n",
+    "Discuss your step-by-step instructions with your team. What do you see as potential challenges to implementing your plan?\n",
+    "\n",
+    "As a team, select an initial data wrangling plan for answering the question."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1fd34910-a70d-4d2a-8d12-00b3dae8a969",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>start.date</th>\n",
+       "      <th>end.date</th>\n",
+       "      <th>number</th>\n",
+       "      <th>name</th>\n",
+       "      <th>ss</th>\n",
+       "      <th>track</th>\n",
+       "      <th>rf.max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Y1852</td>\n",
+       "      <td>1852-10-07</td>\n",
+       "      <td>1852-10-08</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>O</td>\n",
+       "      <td>F1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Y1857</td>\n",
+       "      <td>1857-09-28</td>\n",
+       "      <td>1857-09-28</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>N</td>\n",
+       "      <td>F1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Y1861</td>\n",
+       "      <td>1861-08-17</td>\n",
+       "      <td>1861-08-17</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>O</td>\n",
+       "      <td>Nd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Y1864</td>\n",
+       "      <td>1864-08-31</td>\n",
+       "      <td>1864-08-31</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>S</td>\n",
+       "      <td>F1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Y1865</td>\n",
+       "      <td>1865-09-11</td>\n",
+       "      <td>1865-09-11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>O</td>\n",
+       "      <td>F1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    code  start.date    end.date  number name  ss track rf.max\n",
+       "0  Y1852  1852-10-07  1852-10-08       5  NaN   2     O     F1\n",
+       "1  Y1857  1857-09-28  1857-09-28       4  NaN   2     N     F1\n",
+       "2  Y1861  1861-08-17  1861-08-17       2  NaN   1     O     Nd\n",
+       "3  Y1864  1864-08-31  1864-08-31       3  NaN   1     S     F1\n",
+       "4  Y1865  1865-09-11  1865-09-11       4  NaN   2     O     F1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hurr.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f0450d67-ec3c-4b41-8e78-80147a343326",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>start.date</th>\n",
+       "      <th>end.date</th>\n",
+       "      <th>number</th>\n",
+       "      <th>name</th>\n",
+       "      <th>ss</th>\n",
+       "      <th>track</th>\n",
+       "      <th>rf.max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>Y1955b</td>\n",
+       "      <td>1955-09-28</td>\n",
+       "      <td>1955-09-28</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Janet</td>\n",
+       "      <td>5</td>\n",
+       "      <td>N</td>\n",
+       "      <td>F3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Y1980a</td>\n",
+       "      <td>1980-08-07</td>\n",
+       "      <td>1980-08-08</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Allen</td>\n",
+       "      <td>5</td>\n",
+       "      <td>O</td>\n",
+       "      <td>F3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Y1988</td>\n",
+       "      <td>1988-09-14</td>\n",
+       "      <td>1988-09-15</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Gilbert</td>\n",
+       "      <td>5</td>\n",
+       "      <td>N</td>\n",
+       "      <td>F3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>Y1998</td>\n",
+       "      <td>1998-10-27</td>\n",
+       "      <td>1998-10-28</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Mitch</td>\n",
+       "      <td>5</td>\n",
+       "      <td>S</td>\n",
+       "      <td>F1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       code  start.date    end.date  number     name  ss track rf.max\n",
+       "76   Y1955b  1955-09-28  1955-09-28      10    Janet   5     N     F3\n",
+       "96   Y1980a  1980-08-07  1980-08-08       1    Allen   5     O     F3\n",
+       "98    Y1988  1988-09-14  1988-09-15       8  Gilbert   5     N     F3\n",
+       "103   Y1998  1998-10-27  1998-10-28      13    Mitch   5     S     F1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Filter for 'ss' column that are only category 5\n",
+    "cat5 = hurr[hurr['ss'] ==5]\n",
+    "cat5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c6198b70-5760-404a-8566-dbba4c6486ec",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Counting number of category 5 hurricanes\n",
+    "cat5.ss.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "364e9e91-8e38-4fd4-bc09-c3f88a673531",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "Index: 4 entries, 76 to 103\n",
+      "Series name: start.date\n",
+      "Non-Null Count  Dtype \n",
+      "--------------  ----- \n",
+      "4 non-null      object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 64.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking \n",
+    "cat5['start.date'].info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "40271cff-de3b-4b94-a7aa-f31810806efe",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3295298/1788126371.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  cat5['start.date']= pd.to_datetime(cat5['start.date'])\n",
+      "/tmp/ipykernel_3295298/1788126371.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  cat5['end.date']= pd.to_datetime(cat5['end.date'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "76    1955-09-28\n",
+       "96    1980-08-08\n",
+       "98    1988-09-15\n",
+       "103   1998-10-28\n",
+       "Name: end.date, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat5['start.date']= pd.to_datetime(cat5['start.date'])\n",
+    "cat5['end.date']= pd.to_datetime(cat5['end.date'])\n",
+    "cat5['end.date']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "26955584-25b9-46db-b05a-f9b499492168",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3295298/2628896850.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  cat5['duration'] = cat5['end.date']- cat5['start.date']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat5['duration'] = cat5['end.date']- cat5['start.date']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "31a0d115-6648-45df-b464-f1c27043d42e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>start.date</th>\n",
+       "      <th>end.date</th>\n",
+       "      <th>number</th>\n",
+       "      <th>name</th>\n",
+       "      <th>ss</th>\n",
+       "      <th>track</th>\n",
+       "      <th>rf.max</th>\n",
+       "      <th>duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>Y1955b</td>\n",
+       "      <td>1955-09-28</td>\n",
+       "      <td>1955-09-28</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Janet</td>\n",
+       "      <td>5</td>\n",
+       "      <td>N</td>\n",
+       "      <td>F3</td>\n",
+       "      <td>0 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Y1980a</td>\n",
+       "      <td>1980-08-07</td>\n",
+       "      <td>1980-08-08</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Allen</td>\n",
+       "      <td>5</td>\n",
+       "      <td>O</td>\n",
+       "      <td>F3</td>\n",
+       "      <td>1 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Y1988</td>\n",
+       "      <td>1988-09-14</td>\n",
+       "      <td>1988-09-15</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Gilbert</td>\n",
+       "      <td>5</td>\n",
+       "      <td>N</td>\n",
+       "      <td>F3</td>\n",
+       "      <td>1 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>Y1998</td>\n",
+       "      <td>1998-10-27</td>\n",
+       "      <td>1998-10-28</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Mitch</td>\n",
+       "      <td>5</td>\n",
+       "      <td>S</td>\n",
+       "      <td>F1</td>\n",
+       "      <td>1 days</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       code start.date   end.date  number     name  ss track rf.max duration\n",
+       "76   Y1955b 1955-09-28 1955-09-28      10    Janet   5     N     F3   0 days\n",
+       "96   Y1980a 1980-08-07 1980-08-08       1    Allen   5     O     F3   1 days\n",
+       "98    Y1988 1988-09-14 1988-09-15       8  Gilbert   5     N     F3   1 days\n",
+       "103   Y1998 1998-10-27 1998-10-28      13    Mitch   5     S     F1   1 days"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "845882a6-a2f9-4bbe-94b6-69a75803702f",
+   "metadata": {},
+   "source": [
+    "**Response** Most category 5 hurricanes last for approximately a day or less."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f6523780-49e0-4ac9-b133-d006eefe7473",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d0c44aee-d578-4400-9cca-e25044f3acbb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#fig, ax = plt.subplots(figsize = (12, 5))\n",
+    "\n",
+    "#plt.scatter(hurr['start.date'], hurr['ss'],\n",
+    "            #c= 'red')\n",
+    "\n",
+    "#plt.yticks = ([1,2,3,4,5])\n",
+    "#plt.xlabel(\"Start Date\")\n",
+    "#plt.ylabel(\"Hurricane Category\")\n",
+    "\n",
+    "#plt.title(\"Yucatan Peninsula: Hurricane Over-Time\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14ec0471-157f-460f-ba5c-524ff0b675fd",
+   "id": "41cca8c5-e23a-4a6e-b6e9-d77ceb96b76e",
    "metadata": {},
    "outputs": [],
    "source": []
